rename filepath to render gifs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="grid-container">
             <div class="card">
                 <div class="card-image-container">
-                  <img src="/images/anime-aesthetic.gif" alt="anime gif" class="card-image" />
+                  <img src="/Images/anime-aesthetic.gif" alt="anime gif" class="card-image" />
                 </div>
                 <div class="card-content-container">
                   <div class="card-heading-container">
@@ -45,7 +45,7 @@
               </div>
             <div class="card">
                 <div class="card-image-container">
-                  <img src="/images/kaito-typing.gif" alt="anime typing gif" class="card-image" />
+                  <img src="/Images/kaito-typing.gif" alt="anime typing gif" class="card-image" />
                 </div>
                 <div class="card-content-container">
                   <div class="card-heading-container">
@@ -65,7 +65,7 @@
 
             <div class="card">
                 <div class="card-image-container">
-                  <img src="/images/minato-namikaze-naruto.gif" alt="Minato" class="card-image" />
+                  <img src="/Images/minato-namikaze-naruto.gif" alt="Minato" class="card-image" />
                 </div>
                 <div class="card-content-container">
                   <div class="card-heading-container">
@@ -90,7 +90,7 @@
         <ul class="nav-items">
           <li>
             <a href="https://github.com/fredk-pene"
-            target=”_blank” ><img class="logo" src="./images/download.png" alt="github"
+            target=”_blank” ><img class="logo" src="/Images/download.png" alt="github"
             /></a>
           </li>
         </ul>
